# mcp_safe_local_python_executor

./: .gitignore  README.md  executor.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  run_executor.py  run_mcp_server.py  test_mcp_client.py
local_executor/: __init__.py  executor.py
local_executor/local_executor/: __init__.py
tests/: test_local_python_executor.py  test_mcp_server.py
